# Finet

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml
app/: db.py  main.py  models.py  startup.py
app/assets/icon/: Finet_Icon_Mac.icns
app/db/: accounts.py  budgets.py  categories.py  connection.py  recurring.py  settings.py  transactions.py
app/services/: api.py  converter.py  currency_info.py
app/ui/: accounts.py  budgets.py  dashboard.py  settings.py  transactions.py  util.py
app/utils/: backup.py  crypto.py  recalculate.py
