[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finet"
version = "0.1.0"
description = "A modern, cross-platform personal finance tracker built with Python and Flet."
requires-python = ">=3.14"
dependencies = [
    "flet>=0.21.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "cryptography>=46.0.3",
]

[project.scripts]
finet = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]