[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finet"
version = "1.0.0"
description = "A modern, cross-platform personal finance tracker built with Python and Flet."
requires-python = ">=3.11"
dependencies = [
    "flet>=0.28.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "cryptography>=46.0.3",
]

[project.scripts]
finet = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.flet.build]
module_name = "app.main"
product_name = "Finet"
include_files = [
    "app/assets/finet.db"
]

[tool.flet."build.windows"]
icon = "app/assets/icon/finet.png"

[tool.flet."build.macos"]
icon = "app/assets/icon/finet.png"